@@ -35,9 +35,12 @@ typedef struct _JabberID {
 JabberID* jabber_id_new(const char *str);
 void jabber_id_free(JabberID *jid);
 
+char *jabber_get_domain(const char *jid);
 char *jabber_get_resource(const char *jid);
 char *jabber_get_bare_jid(const char *jid);
 char *jabber_id_get_bare_jid(const JabberID *jid);
+
+gboolean jabber_jid_is_domain(const char *jid);
 
 const char *jabber_normalize(const PurpleAccount *account, const char *in);
 
